hphp/hack/test/typecheck/let/let_lambda_error2.php.exp
File "let_lambda_error2.php", line 8, characters 19-19:
Invalid argument (Typing[4110])
File "let_lambda_error2.php", line 3, characters 24-29:
This is a string
File "let_lambda_error2.php", line 6, characters 11-12:
It is incompatible with an int
